# linuxdeploy-plugin-qt-crash-minimal-example

./: .gitignore  CMakeLists.txt  simple_qt_widgets_test.desktop  try-deploy.sh
